--- a/themePackage/skin/frontend/bootstrap/default/package.json
+++ b/themePackage/skin/frontend/bootstrap/default/package.json
@@ -14,8 +14,8 @@
   "author": "Tobias Hartmann",
   "dependencies": {
     "gulp": "^3.8.10",
-    "gulp-sass": "^1.1.0",
     "gulp-rimraf": "^0.1.1",
-    "gulp-concat": "^2.4.2"
+    "gulp-concat": "^2.4.2",
+    "gulp-sass": "^1.2.4"
   }
 }
